# fmt

./: CMakeLists.txt  README.md  fmt  main.c  storage.c
.cache/clangd/index/: main.c.B21CFF006DC47C48.idx  test.c.2E9F6E0AE4E8F77E.idx  test.h.38C08700A0B752B9.idx
include/: getcwd.h
src/: getcwd.c  test.c
storage/: display_border.c  v1.c
